Cambiato il tipo di immagine nella classe Fotografia da Image a String per problemi.

--- a/ProgettoSIW2019/src/main/resources/messages/validation_IT.properties
+++ b/ProgettoSIW2019/src/main/resources/messages/validation_IT.properties
@@ -5,5 +5,6 @@ required.fotografo.nome = Campo obbligatorio
 required.fotografo.cognome = Campo obbligatorio
 
 required.fotografia.titolo = Campo obbligatorio
+required.fotografia.immagine = Campo obbligatorio
 
 required.album.nome = Campo obbligatorio
